--- a/stylesheets/strip.css
+++ b/stylesheets/strip.css
@@ -41,7 +41,8 @@ a:hover {
 h2 {
     text-align: center;
     font: 400 44px/71px 'Open Sans', sans-serif;  
-    margin: 18px 0;
+    margin: 15px 0px 0px 0px;
+
 }
 
 h2 strong {
@@ -50,9 +51,9 @@ h2 strong {
 
 h3 {
     text-align: center;
-	margin: 0px 0px 15px;
+	margin: 0px 0px 20px;
     font: 400 28px/45px 'Open Sans', sans-serif;  
-   
+  	color: #999; 
 }
 
 .subhead {
@@ -66,6 +67,10 @@ h4 {
     font: 600 16px/26px 'Open Sans', sans-serif;
 }
 
+legend {
+	text-indent: 20px;
+}
+
 .quotes {
     font-family: 'Merriweather', serif;    
 	font-size: 24px;	
@@ -77,7 +82,6 @@ h4 {
 
 .navbar {
     margin:0px;
-    
 }
 
 .navbar-inner {
@@ -86,6 +90,7 @@ h4 {
     -webkit-box-shadow:none;
     -moz-box-shadow:none;
     filter:none;
+    border: none;
 }
 
 .navbar .brand {
@@ -204,6 +209,22 @@ h4 {
 	color: #333333;
 }
 
+.section-box.product-box {
+	padding-top: 0px;
+	margin-top: 0px;
+	border: 0px;
+}
+
+.section-box.complete-box {
+	padding-top: 0px;
+	padding-bottom: 15px;
+}
+
+.section-box.form {
+	padding-top: 10px;
+	
+}
+
 .section-box img
 {
 	margin-top: 30px;
@@ -312,6 +333,10 @@ h4 {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4d90fe', endColorstr='#0072bb', GradientType=0);
 }
 
+.register {
+	margin-left: 110px;
+}
+
 .big-btn:link, 
 .big-btn:visited {
     color:#ffffff;
@@ -367,4 +392,57 @@ h4 {
    	border-top: 1px solid #cccccc;
   	border-bottom: 1px solid #ffffff;
 	
+}
+
+/*
+* custom css - andy 
+*/
+.product-splash {
+	background: url('../images/product-gradient.png') no-repeat;	
+}
+
+.addthis_toolbox {
+	width: 300px;
+	margin-right: 0px;
+	margin-left: 90px;
+	padding-right: 0px;	
+}
+
+.form-block {
+	padding: 20px;
+}
+
+.alert {
+	margin-top: 20px;
+}
+
+.dd-box {
+	color:#468847;
+	background-color:#dff0d8;
+	border-color:#d6e9c6;
+	padding: 20px;
+}
+
+.card-box {
+	background-color:#eee;
+	border-color:#d6e9c6;
+	padding: 20px;
+}
+
+.tick-list li {
+	list-style-image: url('../images/tick-sml.png');
+	margin-left: 20px;
+	padding-left: 15px;
+	line-height: 30px;
+}
+
+.checkout-btn {
+	margin-left: 10px;
+}
+
+.padlock {
+	width: 37px;
+	margin-right: 20px;
+	margin-left: 30px;
+	float: left;
 }
