--- a/stylesheets/strip.css
+++ b/stylesheets/strip.css
@@ -439,3 +439,15 @@ legend {
 	margin-left: 30px;
 	float: left;
 }
+
+.hidden {
+	display: none;
+}
+
+.sidebar-nav-fixed {
+    padding: 9px;
+    position:fixed;
+    left:20px;
+    top:260px;
+    
+}
